# ffmpeg-script

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  create-icons.sh  index.html  package.json  vite.config.js
.github/workflows/: release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
