[package]
name = "ffmpeg-script"
version = "0.0.3"
description = "FFmpeg Script UI"
authors = ["Blaze"]
license = ""
repository = "https://github.com/xxxily/ffmpeg-script"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-all", "dialog-all", "fs-all", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
